# noMEI

./: .gitignore  README.md  main.py  package-lock.json
api/: docker-compose.yml  pyproject.toml
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: contratacoes.py  estatisticas.py  perfil.py
api/app/core/: middleware.py
api/app/domain/contratacoes/: repository.py
api/app/domain/estatisticas/: schemas.py
api/app/domain/perfil/: router.py  service.py
api/app/repositories/: contratacao_repository.py  perfil_repository.py
api/app/schemas/: contratacao.py  estatistica.py  perfil.py
api/app/services/: contratacao_service.py  perfil_service.py
api/tests/: conftest.py
api/tests/domains/auth/: test_auth_service.py  test_rbac.py
config/: __init__.py
docs/: atividades.md
etl-pipeline/: .env.example  .gitignore  README.md  main.py  orchestrate_prefect.py  requirements.txt
etl-pipeline/config/: settings.py
etl-pipeline/src/: __init__.py  extractor.py  loader.py  pipeline.py  transformer.py
front-end/: README.md
front-end/noMEI/: App.tsx  app.json  index.ts  package-lock.json  package.json
front-end/noMEI/src/components/: Button.tsx  Card.tsx  DisputaCard.tsx  EmptyState.tsx  ErrorState.tsx  Header.tsx  Input.tsx  LoadingState.tsx  RecommendedCard.tsx  (+2 more)
noMEI-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  package-lock.json  pyproject.toml
noMEI-backend/app/: config.py  main.py
noMEI-backend/app/core/: context.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
noMEI-backend/tests/: conftest.py
src/: extractor.py  pipeline.py
(+58 files in other folders)
